--- a/layout/includes/anzhiyu/rightmenu-js.pug
+++ b/layout/includes/anzhiyu/rightmenu-js.pug
@@ -24,6 +24,18 @@ script.
     } else {
       rightMenu.style.display = "none";
     }
+    document.documentElement.style.setProperty(
+      "--anzhiyu-main",
+      getComputedStyle(document.documentElement).getPropertyValue("--anzhiyu-theme")
+    );
+    document.documentElement.style.setProperty(
+      "--anzhiyu-theme-op",
+      getComputedStyle(document.documentElement).getPropertyValue("--anzhiyu-main") + "23"
+    );
+    document.documentElement.style.setProperty(
+      "--anzhiyu-theme-op-deep",
+      getComputedStyle(document.documentElement).getPropertyValue("--anzhiyu-main") +"dd"
+    );
   };
 
   // 隐藏菜单
