调整copyright样式表现

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -82,6 +82,7 @@
   --style-border-deep-ash: 1px solid #d0d7de;
   --style-border-hover-always: 1px solid var(--anzhiyu-main);
   --anzhiyu-main-none: #b8b8b800 !important;
+  --anzhiyu-wihite-font: #fff
 
 [data-theme="light"]
   --anzhiyu-meta-theme-post-color: #fff;
@@ -118,6 +119,7 @@
   --anzhiyu-card-border: #e3e8f7;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0.00);
   --anzhiyu-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0.00);
+  --anzhiyu-wihite-font: #fff
 
 [data-theme="dark"]
   --anzhiyu-meta-theme-post-color: #1d1e22;
@@ -155,6 +157,7 @@
   --anzhiyu-card-border: #42444a;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0.0);
   --anzhiyu-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0.0);
+  --anzhiyu-wihite-font: #f6f6f6
 
 body
   position: relative
