--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -266,6 +266,7 @@ blockquote {
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      margin-top: 1.5rem;
       .post-copyright__author_img
         width: 66px;
         height: 66px;
@@ -314,10 +315,10 @@ blockquote {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 12px;
+      margin-top: 0.2rem;
     &__original,&__reprint
       background: var(--anzhiyu-main);
-      color: var(--anzhiyu-card-bg);
+      color: var(--anzhiyu-wihite-font);
       padding: 0.2rem 1rem;
       font-size: .8rem;
       border-radius: 8px;
