文章整体收窄1.5rem 动画效果进一步加强

--- a/source/css/_custom/essay_page/home_essay_bar.css
+++ b/source/css/_custom/essay_page/home_essay_bar.css
@@ -11,12 +11,12 @@
   align-items: center;
   height: 50px;
   width: 100%;
-  max-width: 1370px;
+  max-width: calc(1400px - 3rem);
   animation: slide-in .6s 0s backwards;
 }
 @media screen and (max-width: 1400px) {
   #bbTimeList {
-    max-width: calc(100% - 30px);
+    max-width: calc(100% - 3rem);
     animation: slide-in 0.6s 0s backwards;
   }
 }
