--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -188,7 +188,7 @@ div#travellings_button
   cursor pointer
 
 #nav #menus
-  padding 0 calc((100% - 1370px) / 2)
+  padding 0 calc((100% - 1400px + 3rem) / 2)
   display flex
   justify-content center
   width 100%
@@ -690,11 +690,11 @@ ul.menus_item_child
 /* 媒体查询适配 */
 @media screen and (max-width: 1390px)
   #nav
-    padding 15px
+    padding 0 1.5rem
   #nav .mask-name-container
-    padding 15px
+    padding 0 1.5rem
   div#menus
-    padding 15px
+    padding 0 1.5rem
 
 @media screen and (min-width: 900px)
   #nav .back-home-button:hover
