--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -255,9 +255,10 @@
   width: 100%;
 #home_top
   margin: 0 auto 0;
-  padding: 0px 15px 0px;
+  padding: 0px 1.5rem 0px;
   max-width: 1400px;
   width: 100%;
+  animation: slide-in 0.6s 0s backwards;
   // overflow: hidden;
 
 +maxWidth768()
