--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -410,7 +410,7 @@
   z-index: 90
   display: flex
   align-items: center
-  padding: 0 calc((100% - 1370px) / 2);
+  padding 0 calc((100% - 1400px + 3rem) / 2)
   width: 100%
   height: 60px
   font-size: 1.3em
