修复自定义阿里社交图标样式异常

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -130,7 +130,7 @@
         font-size: 1.4em;
         cursor: pointer;
         display: flex;
-        i
+        i, svg
           background: var(--anzhiyu-white-op);
           color: var(--anzhiyu-white);
           font-size: 1rem;
