--- a/layout/includes/anzhiyu/log-js.pug
+++ b/layout/includes/anzhiyu/log-js.pug
@@ -31,7 +31,7 @@ script.
       "已上线",
       dnum,
       "天",
-      "©#{since} By 安知鱼 #{version}",
+      "©#{since} By 安知鱼 V#{version}",
     ];
     const ascll2 = [`NCC2-036`, `调用前置摄像头拍照成功，识别为【小笨蛋】.`, `Photo captured: `, `🤪`];
 
