移动端版权2行显示

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -365,6 +365,8 @@ blockquote {
         -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
         text-align: center;
+        +maxWidth768()
+          -webkit-line-clamp: 2;
         a
           &:hover
             color: var(--anzhiyu-main)
