置顶标识位置更改

--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -20,16 +20,27 @@ mixin postUI(posts)
         .article-meta__categories__box(style=`${(new_post && !theme.cover.index_enable) ? "left: 95px":""}`)
           each item, index in article.categories.data
             a(href=url_for(item.path)).article-meta__categories #[=item.name]
-          a.unvisited-post(href=url_for(link) title=title style=`${(!theme.cover.index_enable) ? "position: static;": new_post ? (theme.article_double_row ? "left: 90px;": "left: calc(44% + 85px);"):""}`) 未读
+          a.unvisited-post(href=url_for(link) title=title style=`${(!theme.cover.index_enable) ? "position: static;": new_post ? (theme.article_double_row ? (is_home() && (article.top || article.sticky > 0)) ? "left: 135px;" : "left: 90px;" : (is_home() && (article.top || article.sticky > 0)) ? "left: calc(44% + 130px);" : "left: calc(44% + 82px);") : ""}`) 未读
       else 
-        a.unvisited-post(href=url_for(link) title=title style=`${(new_post && theme.cover.index_enable) ? "left: 90px;":""}`) 未读
+        - let unvisitedleft = null
+        if (new_post && theme.cover.index_enable)
+          - unvisitedleft = "90px"
+        if (is_home() && (article.top || article.sticky > 0))
+          - unvisitedleft = "calc(44% + 75px)"
+        if (is_home() && (article.top || article.sticky > 0)) && theme.article_double_row
+          - unvisitedleft = "80px"
+        else if (new_post && theme.cover.index_enable) && (is_home() && (article.top || article.sticky > 0))
+          - unvisitedleft = "calc(44% + 130px)"
+        if (new_post && theme.cover.index_enable) && (is_home() && (article.top || article.sticky > 0)) && theme.article_double_row
+          - unvisitedleft = "135px"
+        a.unvisited-post(href=url_for(link) title=title style=`${unvisitedleft ? `left: ${unvisitedleft};` : ''}`) 未读
       if post_cover && theme.cover.index_enable
         .post_cover(class=leftOrRight)
           a(href=url_for(link) title=title)
             img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title)
       .recent-post-info(class=no_cover)
         if new_post
-          span.newPost 最新文章
+          span.newPost(style=`${(is_home() && (article.top || article.sticky > 0)) ? 'left: 80px': ''}`) 最新文章
         a.article-title(href=url_for(link) title=title)= title
         .article-meta-wrap
           if (is_home() && (article.top || article.sticky > 0))
