--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -186,8 +186,9 @@
           bottom: 30px;
         .sticky-warp
           position: absolute;
-          top: -100px;
-          right: 32px;
+          top: -90px;
+          left: 32px;
+          line-height: 12px
         .article-meta
           if hexo-config("post_meta.page.date_type") != 'both'
             white-space: nowrap;
