1. 增大首页文章链接触发范围 2. 新增swpp适配 3. 优化加载动画 4. 修复默认打字机

--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -41,8 +41,7 @@
           .footer-links#friend-links-in-footer
 
   if theme.footer.owner.enable && !theme.footer.footerBar.enable
-    - var now = new Date()
-    - var nowYear = now.getFullYear()
+    - var nowYear = new Date().getFullYear()
     if theme.footer.owner.since && theme.footer.owner.since != nowYear
       .copyright!= `&copy;${theme.footer.owner.since} - ${nowYear} By ${config.author}`
     else
@@ -68,8 +67,7 @@ if theme.footer.footerBar && theme.footer.footerBar.enable
       .footer-bar-left
         #footer-bar-tips
           if theme.footer.owner.enable
-            - var now = new Date()
-            - var nowYear = now.getFullYear()
+            - var nowYear = new Date().getFullYear()
             - let authorLink = theme.footer.footerBar.authorLink ? theme.footer.footerBar.authorLink : config.url
             if theme.footer.owner.since && theme.footer.owner.since != nowYear
               .copyright!= `&copy;${theme.footer.owner.since} - ${nowYear} By `
