--- a/source/css/_custom/commentBarrage/commentBarrage.css
+++ b/source/css/_custom/commentBarrage/commentBarrage.css
@@ -27,14 +27,15 @@
   background: var(--anzhiyu-maskbgdeep);
   border-radius: 8px;
   color: var(--anzhiyu-fontcolor);
-  animation: barrageIn 0.6s cubic-bezier(0.42, 0, 0.3, 1.11);
-  transition: 0.3s;
+  animation: barrageIn 0.6s cubic-bezier(.69, .39, 0, 1.21);
+  transition: all 0.6s;
   display: flex;
   flex-direction: column;
   border: var(--style-border);
   backdrop-filter: saturate(180%) blur(20px);
   -webkit-backdrop-filter: blur(20px);
   transform: translateZ(0);
+  transform-origin: bottom right;
   position: fixed;
   box-shadow: var(--anzhiyu-shadow-border);
 }
@@ -44,7 +45,8 @@
 }
 .comment-barrage-item.out {
   opacity: 0;
-  animation: barrageOut 0.6s cubic-bezier(0.42, 0, 0.3, 1.11);
+  animation: barrageOut 0.6s cubic-bezier(.69, .39, 0, 1.21);
+  transform-origin: center;
 }
 .comment-barrage-item a.barrageContent:hover {
   color: var(--anzhiyu-main);
@@ -135,21 +137,24 @@
 }
 @keyframes barrageIn {
   0% {
-    transform: translateY(20px);
+    transform: translate(0, 0) scale(0);
     opacity: 0;
+    transform-origin: bottom right;
   }
   100% {
-    transform: translateY(0);
+    transform: none;
+    transform-origin: bottom right;
     opacity: 1;
   }
 }
+
 @keyframes barrageOut {
   0% {
-    transform: translateY(0px);
+    transform: none;
     opacity: 1;
   }
   100% {
-    transform: translateY(20px);
+    transform: translate(0, 0) scale(0);
     opacity: 0;
   }
 }
